<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.dev.mohamed.partyphotos.SingleImageShowActivity">

    <ImageSwitcher
        android:id="@+id/img_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"/>


    <ImageView
        android:id="@+id/img_left"
        android:layout_width="50dp"
        android:layout_height="80dp"

        android:onClick="previousPhoto"
        android:background="@drawable/left_gridiant"
        android:src="@drawable/ic_left_arrow"
        android:contentDescription="@string/previous_photo_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_right"
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:onClick="nextPhoto"
        android:contentDescription="@string/next_photo_button"
        android:background="@drawable/right_gridiant"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.FloatingActionButton
        android:layout_width="60dp"
        android:layout_height="60dp"

        android:onClick="downloadImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_download"
        android:contentDescription="@string/download_photo_button"/>
</android.support.constraint.ConstraintLayout>
