<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    tools:context="com.dev.mohamed.partyphotos.StartPartyActivity">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:background="@drawable/small"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/ovalwithstork"
        android:elevation="8dp"
        android:onClick="takeMainPhoto"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/img_avatar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/click_to_set_main_party_photo"
            android:fontFamily="@font/architects_daughter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_avatar" />

        <EditText
            android:id="@+id/ed_partyname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/state_layout"
            android:layout_margin="8dp"
            android:background="@drawable/editetext_background"
            android:drawableStart="@drawable/ic_partyname"
            android:drawableLeft="@drawable/ic_partyname"
            android:drawablePadding="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:hint="@string/party_name"
            android:fontFamily="@font/architects_daughter"
            app:layout_constraintTop_toBottomOf="@id/tv"
            />

        <LinearLayout
            android:id="@+id/state_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv"
            android:layout_gravity="end">

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="8dp"
                android:background="@drawable/editetext_background"
                android:drawableStart="@drawable/ic_padlock_black"
                android:drawableLeft="@drawable/ic_padlock_black"
                android:drawablePadding="8dp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:enabled="false"
                android:hint="@string/password"
                android:visibility="visible"
                android:inputType="textPassword"
                android:fontFamily="@font/architects_daughter"
                app:layout_constraintTop_toBottomOf="@id/ed_partyname"
                />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sc_party_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_padlock"
                android:layout_gravity="center"/>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/bt_openparty"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="openParty"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_photo_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_password" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
